split some stuff, changed the preprocessing image, and started adding one more picture for the particle filter.

--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -33,6 +33,13 @@
 \usepackage{algorithmic}
 \usepackage{subfigure}
 
+\usepackage{amsmath}	% math fonts
+\usepackage{amsthm}
+\usepackage{amsfonts}
+
+%plots
+\usepackage{tikz}
+
 \definecolor{mblue}{RGB}{178,34,34}
 \definecolor{mred}{RGB}{0,0,128}
 \definecolor{mgreen}{RGB}{0,100,0}
@@ -92,473 +99,10 @@ using Particle Filters}
   \note{Methods - The methods used in this work, how to recreate.}
 \end{frame}
 
-\section{Introduction}
-\begin{frame}{Balloon Model}
-\begin{figure}
-\includegraphics[width=10cm]{model2}
-\caption{
-    \tiny
-    \cite{Riera2003}
-}
-\end{figure}
-\note{Its been known for about 20 years that changes in Blood Oxygen Level alter
-        MR signals in certain types of imaging. The basis of contrast in fMRI is 
-        changes in the so-called spin-spin relaxation (or T2$^*$ relaxation time
-        of tissue). The rate of loss in nuclear spin coherence depends on the molecules in the voxel being
-        measured \emph{and the surrounding voxels}. For this reason the signal 
-        detected from BLOOD doesn't just depend on the amount of oxygen, but also the
-        amount of De-oxygenated hemoglobin. The question then, is what drives changes
-        in De-oxygenated Hemoglobin and blood volume?
-        
-        Well the brain has no local oxygen storage, so it is completely dependent on 
-        fresh Oxygenated-Hemoglobin. When the brain becomes more active, firing rates
-        for neurons increase by several orders of magnitude, and recharging these neurons
-        requires additional oxygen for matabolism. }
-\note{Rates from below 1 Hz to 5 to 6 Hundred Hz}
-\note{Change in average firing rates increase metabolism and sympathetic response causes
-        increased inflow of oxygenated blood.}
-\note{In the version of the Balloon model I used, the flow is locked to metabolism.}
-\note{According the balloon model this increases the local blood volume, and the outflow pressure.}
-\note{So the signal is altered by changes in the ratio of Deoxyhemoglobin and Oxygenated Hemoglobin,
-        which are a function of Volume and Oxygenation.}
-\end{frame}
-
-\begin{frame}{Activation Chain}
-\begin{figure}
-    \includegraphics[width=\textwidth]{graphs}
-\caption{
-    \tiny
-    \cite{Buxton2004}
-}
-\end{figure}
-\end{frame}
-
-%more expansion of all the parameters
-\begin{frame}{BOLD State Space Model}
-  \scriptsize
-  \begin{columns}
-  \begin{column}{.7\textwidth}
-    \begin{itemize}
-    \item State Vector:
-    \begin{eqnarray}
-    \color{mblue}\dot{s}(t) &=& {\color{mred}\epsilon} {\color{mgreen}u(t)} - 
-                \frac{\color{mblue}s(t)}{\color{mred}\tau_s} - \frac{{\color{mblue}f(t)}-1}{\color{mred}\tau_f} \nonumber \\
-    \color{mblue}\dot{f}(t) &=& \color{mblue}s \nonumber \\
-    \color{mblue}\dot{v}(t) &=& \frac{{\color{mblue}f(t)} - 
-                {\color{mblue}v(t)} ^ {1/{\color{mred}\alpha}}}{\color{mred}\tau_0} \nonumber \\
-    \color{mblue}\dot{q}(t) &=& \frac{1}{\color{mred}\tau_0}
-            \left(\frac{{\color{mblue}f(t)}(1-(1-{\color{mred}E_0})^{1/\color{mblue}f(t)})}{\color{mred}E_0} -
-        \frac{\color{mblue}q(t)}{{\color{mblue}v(t)}^{1-1/\color{mred}\alpha}}\right) \nonumber 
-    \end{eqnarray}
-    \item Output:
-    $${\color{myellow}y(t)} = {\color{mred}V_0}(a_1( 1 - {\color{mblue}Q(t)}) - a_2(1 - {\color{mblue}V(t)}))$$
-    \end{itemize}
-  \end{column}
-
-  \begin{column}{.3\textwidth}
-    \begin{itemize}
-        \item State Variables:
-        $${\color{mblue}s(t)}, {\color{mblue}f(t)}, {\color{mblue}v(t)}, {\color{mblue}q(t)}$$
-        \item Parameters:
-        $${\color{mred}\epsilon}, {\color{mred}\tau_s}, {\color{mred}\tau_f}, {\color{mred}\alpha}, 
-                    {\color{mred}\tau_0}, {\color{mred}E_0}, {\color{mred}V_0}$$
-        \item Constants:
-        $$a_1, a_2$$
-        \item Input:
-        $$\color{mgreen}u(t)$$
-    \end{itemize}
-  \end{column}
-  \end{columns}
-  \note{System is dissipative:\\
-  If no input is provided, it will rather quickly decay.\\
-  Constant input leads to steady state response.\\
-  First term in $\dot{q}$ is the metabolism term.\\
-  Outflow is the $v^{1/\alpha}$ term\\
-  Significant nonlinearity.}
-\end{frame}
-
-\section{Nonlinear Regression}
-\subsection{Prior Works}
-\begin{frame}{Approximation Method}
-  \begin{itemize}
-    \item 2nd Order Volterra Kernel \cite{Friston2000}
-    \note{Quadratic Approximation}
-    \begin{itemize}
-        \item Quadratic Convolution used to approximate Jacobian Matrix.
-        \note{Because of the nonlinearities in the BOLD model, step size for
-                integrating would otherwise be extremely small}
-        \item Volterra approximation quality is not known.
-    \end{itemize}
-    \note{Volterra Approximation depends on sparsity etc}
-    {\footnotesize
-    $$y(t) = k_0 + \int_{-\infty}^{\infty} k_1(s_1) x(t-s_1) ds_1
-        + \int_{-\infty}^{\infty} k_2(s_1,s_2) x(t-s_1)x(t-s_2) ds_1 ds_2$$
-        \note{Its possible this isn't even knowable}
-    }
-    \item Canonical Hemodynamic Response Function
-    \note{Linear Approximation}
-    \begin{itemize}
-        \item No Parameters Estimated
-        \item Maximum Likelihood Possible
-        \item Inflexible - even to changes in onset time
-    \end{itemize}
-    \begin{center}
-    \includegraphics[clip=true,trim=4.88cm 0cm 5cm 1.5cm,height=2.7cm,width=8cm]{HRF}
-    \end{center}
-    
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Nonlinear Methods}
-\begin{itemize}
-    \begin{columns}
-    \begin{column}{.42\textwidth}
-    \item Local Linearization filter, \cite{Riera2003}
-    $$f(t)- f(t-1) \sim N(0, \sigma^2)$$
-     \note{Jacobian of the $\dot{x}$ is available, making gradient descent possible}
-    \item Genetic Algorithms and Simulated Annealing, \cite{Vakorin2007}
-     \note{Genetic Algorithms were used to optimize spike points, simulated annealing for the parameters}
-    \item Particle Filters to estimate States, \cite{Murray2009}
-    \begin{itemize}
-        \item ML estimate of $\Theta$, \cite{Johnston2007}
-         \note{Particle Filter used to estimate states, ML of parameters based on the posterior of states and so on}
-    \end{itemize}
-    \item Unscented Kalman Filter \cite{Hu2009}
-     \note{Technically Kalman Filters and Particle Filters are Bayesian Filters}
-     \note{Essentially filtering out inconsistent parameters.}
-    \end{column}
-
-    \begin{column}{.58\textwidth}
-    \begin{figure}
-    \includegraphics[clip=true,trim=0cm 0cm 0cm 1cm,width=.6\textwidth]{simulated_annealing}
-    \caption{Simulated Annealing can escape local minima with chaotic jumps. \cite{Dama}}
-    \end{figure}
-    \begin{figure}
-    \includegraphics[width=\textwidth]{kalman}
-    \caption{UKF: (a) Initial Belief  (b) Noisy Measurement  (c) incorporated into the belief. \cite{Thrun2005}}
-    \end{figure}
-    \end{column}
-    \end{columns}
-\end{itemize}
-\end{frame}
-
-\subsection{Particle Filter}
-%frame with example
-\begin{frame}{Example System Identification}
-\begin{itemize}
-\item Given:
-    \begin{itemize}
-    \item Elevation Map (1D)
-    \item Ability To Measure Elevation
-    \end{itemize}
-\item Particle Consists of the unknowns:
-    \begin{itemize}
-    \item State: Location  $[0, 20]$
-    \item Constant: Direction  $\{Left, Right\}$
-    \end{itemize}
-\end{itemize}
-
-\begin{center}
-\includegraphics[clip=true,trim=2cm 3cm 3cm 3cm,width=.7\textwidth]{setup}
-\end{center}
-\end{frame}
-
-\begin{frame}{Initial Distribution}
-\centering
-\includegraphics[width=\textwidth]{init}\\
-\end{frame}
-
-\begin{frame}{Measurement 1}
-\centering
-\includegraphics[width=\textwidth]{meas1}\\
-\end{frame}
-
-\begin{frame}{Step Forward}
-\centering
-\includegraphics[width=\textwidth]{move1}\\
-\end{frame}
-
-\begin{frame}{Measurement 2}
-\centering
-\includegraphics[width=\textwidth]{meas2}\\
-\end{frame}
-
-\begin{frame}{Step Forward}
-\centering
-\includegraphics[width=\textwidth]{move2}\\
-\end{frame}
-
-\begin{frame}{Particle Filter Concepts}
-\small
-\begin{columns}
-\begin{column}{.5\textwidth}
-\begin{itemize}
-    \item Weighting Function
-    \item Resampling
-    \begin{itemize}
-        \item Remove Useless Particles
-    \end{itemize}
-    \item Regularized Resampling
-    \begin{itemize}
-        \item Prevent Redundant Particles
-        \item Reduces Quantization Error
-    \end{itemize}
-\end{itemize}
-\end{column}
-
-\begin{column}{.5\textwidth}
-\includegraphics[clip=true,trim=0cm 6cm 0cm 6cm,width=\textwidth]{particle_filter2}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}{Construction}
-\begin{itemize}
-    \item Mixture PDF at time $k$, with $N_p$ particles:\\
-        $$P(x_k) = \sum_{i=0}^{N_p} w^i\delta(x_k - x^i_k ) dx$$
-    \item Weight of Particle $i$, at time $t_k$:\\
-        $$w^i_k \propto \frac{P(x^i_{0:k} | y_{0:k})}{q(x^i_{0:k} | y_{0:k})}$$
-      \note{$q$ is the density/location of the particle}
-      \note{$p$ is the actual probability }
-    \item Incorporating a Measurement, $y_k$:\\
-        $$w^i_k \propto & w^i_{k-1}P(y_k| x_k) $$
-      \note{Because of the proportion, note that the weights do not
-            have to integrate to 1, and can be extremely large or extremely small}
-\end{itemize}
-\end{frame}
-
-\section{Methods}
-\begin{frame}{Particle Filter Setup}
-\footnotesize
-\begin{itemize}
-    \item Weighting function
-        \begin{itemize}
-            \item Continuous, Long Tailed, Zero-Mean 
-            \item Too wide $\rightarrow$ under-sensitivity, 
-                slow or no convergence
-            \item Too thin $\rightarrow$ reduces robustness 
-                to noise, particle deprivation
-            \item For this work, $N(0, 0.005^2)$ used
-        \end{itemize}
-    \item Resampling 
-        \begin{itemize}
-            \item Stratified Resampling can result in truncated tails 
-                    on posterior
-            \item Regularized Resampling can result in over smoothing and 
-                    slow convergence
-            \item Resampling Performed Rarely
-        \end{itemize}
-    \item Number of particles
-        \begin{itemize}
-            \item More particles give higher fidelity 
-            \item Large Initial Particle Count (16000)
-        \end{itemize}
-    \item Prior Distribution
-    \begin{itemize}
-            \item Large $\tau$ parameters can oversmooth
-            \item $\epsilon$ needs large variance
-    \end{itemize}
-\end{itemize}
-\note{Because the first 20 measurements drop most weights very quickly this gives a large breadth,
-    but after the initial calculations drops the computation requirements}
-\note{This has not been done before}
-\end{frame}
-
-
-\begin{frame}{FMRI Noise}
-\centering
-
-Resting State Noise
-
-\includegraphics[trim=3cm 0cm 3cm 0cm,width=.75\textwidth]{noise2_0009_22_38_23}
-
-Resting State Noise Steps
-
-\includegraphics[trim=3cm 0cm 3cm 0cm,width=.75\textwidth]{noise2_0009d_22_38_23}
-
-\note{Tanabe 2002 \autoref{Tanabe2002} 10-15\% of voxels exhibit significant drift}
-\note{Occurs in Cadavers.}
-\end{frame}
-
-\begin{frame}{Preprocessing}
-  \begin{columns}
-    \begin{column}{.6\textwidth}
-        \begin{itemize}
-            \item Drop Initial Volumes (9, $18.9$s)
-            \item Realign Over Time
-            \item Detrend (SPM uses $0.0078125 Hz$ cut off)
-            \item Gaussian Smoothing (SPM Only)
-            \begin{itemize}
-                \item Imposes Gaussianity
-                \item Increases SNR
-                \item Reduces Bonferroni Correction Requirement
-            \end{itemize}
-        \end{itemize}
-    \end{column}
-    
-    \begin{column}{.4\textwidth}
-        \includegraphics[width=\textwidth]{preprocess}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-\section{Results}
-\subsection{40 Minute Single Voxel Simulation}
-\begin{frame}{Long Run Results}
-\includegraphics[width=\textwidth]{long_converge}
-\note{Bars drop well before the end}
-\note{Mean is good estimator}
-\note{Mean comes very close to truth}
-\end{frame}
-
-\begin{frame}{Long Run Covariance and Correlation}
-\centering
-Estimated Parameter Covariance 
-
-\begin{table}[t]
-\tiny
-\begin{tabular}{|c | c  c  c  c  c  c  c |}
-\hline
-  & $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$ \\
-\hline
-\rowcolor[gray]{.8} $\tau_0$  & 0.0004334 & 5.2e-05 & -6.95e-05 & 3.3e-06 & 0.0001628 & -2e-07 & 0.0001798 \\
-$\alpha$                      & 5.2e-05 & 7.9e-06 & -6.4e-06 & 3e-07 & 1.04e-05 & -1.92e-05 & 2.58e-05 \\
-\rowcolor[gray]{.8} $E_0$     & -6.95e-05 & -6.4e-06 & 1.9e-05 & -9e-07 & -4.11e-05 & -3.24e-05 & -3.92e-05 \\
-$V_0$                         & 3.3e-06 & 3e-07 & -9e-07 & 1e-07 & 1.1e-06 & 9e-07 & 1e-06 \\
-\rowcolor[gray]{.8} $\tau_s$  & 0.0001628 & 1.04e-05 & -4.11e-05 & 1.1e-06 & 0.0001589 & 0.0001518 & 7.88e-05 \\
-$\tau_f$                      & -2e-07 & -1.92e-05 & -3.24e-05 & 9e-07 & 0.0001518 & 0.0002966 & -2.34e-05 \\
-\rowcolor[gray]{.8} $\epsilon$& 0.0001798 & 2.58e-05 & -3.92e-05 & 1e-06 & 7.88e-05 & -2.34e-05 & 0.0001966 \\
-\hline
-\end{tabular}
-\label{tab:long_cov}
-\end{table}
-
-Estimated Parameter Correlation 
-
-\begin{table}[t]
-\tiny
-\begin{tabular}{|c | c  c  c  c  c  c  |}
-\hline
-  & $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$  \\
-\hline
-\rowcolor[gray]{.8} $\tau_0$  & & & & & & \\
-$\alpha$                      & 0.889884 & & & & & \\
-\rowcolor[gray]{.8} $E_0$     & -0.7661395 & -0.5230723 & & & & \\
-$V_0$                         & 0.6244049 & 0.4239271 & -0.7964774 & & & \\
-\rowcolor[gray]{.8} $\tau_s$  & 0.6204843 & 0.295425 & -0.7481253 & 0.3440421 & & \\
-$\tau_f$                      & -0.0004259 & -0.3966881 & -0.4314174 & 0.1962954 & 0.6990775 & \\
-\rowcolor[gray]{.8} $\epsilon$& 0.6158116 & 0.6558179 & -0.641348 & 0.2846632 & 0.4458142 & -0.097079 \\
-\hline
-\end{tabular}
-\note{Correlation of parameter estimates at the end of 
-            \autoref{fig:long_converge}.}
-\label{tab:long_corr}
-\end{table}
-\end{frame}
-
-\subsection{5 Minute, Single Voxel Simulation}
-\begin{frame}{Preprocessed Noisy Simulation vs. Underlying Signal}
-\begin{center}
-\includegraphics[clip=true,trim=6cm 2cm 5cm 3.5cm,width=.9\textwidth]
-            {preprocessed_lownoise}
-\end{center}
-\end{frame}
-
-\begin{frame}{Estimated vs. Underlying Signal}
-\begin{center}
-\includegraphics[clip=true,trim=6cm 2cm 5cm 3.5cm,width=.9\textwidth]
-            {comparison_lownoise}
-\end{center}
-\end{frame}
-
-\begin{frame}{Estimated Parameters}
-\begin{table}[t]
-\centering
-\resizebox{\textwidth}{!}{
-\begin{tabular}{|c | c | c | c | c | c | c | c | c | c |}
-\hline
-$\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & $ \sum \tau $ & Error & Residual\\
-\hline
-\rowcolor[gray]{.8}
-1.45 & 0.3 & 0.47 & 0.044 & 1.94 & 1.99 & 1.8  & 5.38 &  & \\
-\hline
-\hline
-1.2221 & 0.3449 & 0.3346 & 0.0714 & 1.6045 & 2.2753 & 1.5945 & 5.1019 &  0.003211  & 0.00224\\
-1.3749 & 0.3318 & 0.3630 & 0.0733 & 1.6408 & 2.1030 & 1.5763 & 5.1187 &  0.003055  & 0.00223\\
-1.1660 & 0.3221 & 0.3406 & 0.0822 & 1.6477 & 2.3535 & 1.2452 & 5.1672 &  0.003289  & 0.00205\\
-1.2318 & 0.3271 & 0.3403 & 0.0796 & 1.6270 & 2.1852 & 1.3033 & 5.0439 &  0.002847  & 0.00147\\
-1.1832 & 0.3179 & 0.3472 & 0.0821 & 1.5496 & 2.2912 & 1.2782 & 5.0240 &  0.003006  & 0.00213\\
-1.1424 & 0.334  & 0.3473 & 0.0737 & 1.6221 & 2.2908 & 1.4025 & 5.0553 &  0.002833  & 0.00184\\
-1.3004 & 0.3596 & 0.3564 & 0.0768 & 1.5641 & 2.1323 & 1.6034 & 4.9968 &  0.003028  & 0.00255\\
-1.2401 & 0.3460 & 0.3398 & 0.0891 & 1.6499 & 2.2366 & 1.2900 & 5.1265 &  0.003044  & 0.00238\\
-1.1709 & 0.3274 & 0.3464 & 0.0826 & 1.5373 & 2.2826 & 1.3783 & 4.9909 &  0.003345  & 0.0027 \\
-1.1897 & 0.3434 & 0.3355 & 0.0798 & 1.5358 & 2.3075 & 1.4277 & 5.0330 &  0.003175  & 0.00244\\
-1.184 &  0.3405 & 0.3502 & 0.0892 & 1.6103 & 2.2793 & 1.1645 & 5.0735 &  0.002889  & 0.00188\\
-\hline                                                                               
-1.2187 & 0.3359 & 0.3456 & 0.0800 & 1.599 & 2.2488 & 1.3876 & 5.0665 & 0.003066     & 0.00217\\
-\hline
-\end{tabular}
-}
-\end{table}
-\end{frame}
-
-\subsection{POSSUM Simulation}
-\begin{frame}{Mutual Information Compared with SNR}
-\begin{figure}
-\centering
-\subfigure[Regions]{\includegraphics[height=.46\textheight]{simregions}}
-\subfigure[Mutual Information]
-{\includegraphics[height=.46\textheight]{sim_hm_15_6}}
-\subfigure[SNR]{\includegraphics[height=.46\textheight]{snr_hm}}
-\note{Mean SNR's Region 1: $0.8$, Region 2: $0.97$, and Region 3: $0.39$.}
-\end{figure}
-\end{frame}
-
-\begin{frame}{POSSUM Results: Histogram}
-\begin{figure}
-%\centering
-\includegraphics[clip=true,trim=5cm 2cm 5cm 2cm, width=.9\textwidth]{sec2hist}
-\note{Histogram of estimated parameters.}
-\note{Average SNR: $0.97$}
-\note{Mutual Information greater than $0.15$.}
-\end{figure}
-\end{frame}
-
-\subsection{Real FMRI Data}
-\begin{frame}{SPM vs. Mutual Information Map}
-\begin{columns}
-\begin{column}{.5\textwidth}
-\begin{figure}
-\setcounter{subfigure}{0}
-
-\subfigure[SPM Results]{\includegraphics[width=.9\textwidth]{spm_hm}}
-\subfigure{\includegraphics[width=.07\textwidth]{scale1}}
-\note{SPM results. Units of activation are in Student's $t$-scores; higher 
-        indicates higher assurance that the signal cannot have occurred 
-        through noise alone.}
-\label{fig:hm_canon_spm}
-\end{figure}
-\end{column}
-
-\begin{column}{.5\textwidth}
-\begin{figure}
-\setcounter{subfigure}{1}
-\subfigure[Particle Filter Results]{\includegraphics[width=.9\textwidth]{hm_mi_strict}}
-\subfigure{\includegraphics[height=1.5cm,width=.07\textwidth]{scale4}}
-\note{Particle filter results. Units of activation are in mutual information;
-    higher indicates more assured activation.}
-\end{figure}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}{Particle Filter Results: Histogram}
-\begin{figure}
-\centering
-\includegraphics[clip=truew,trim=8cm 4cm 8cm 4cm,width=.8\textwidth]{realhist}
-\note{Histogram of parameters in active regions ($M.I. > .15$).}
-\end{figure}
-\end{frame}
+\include{introduction}
+\include{nonlinear}
+\include{methods}
+\include{results}
 
 \section{Conclusion}
 \begin{frame}{Conclusion}
